syntax = "proto3";
package profile;

option go_package = "profile";

import "google/api/annotations.proto";

service Profile {
    rpc Get (GetRequest) returns (GetResponse) {
        option (google.api.http) = {
                                get: "/v1/profile/{id}"
        };
    }

    rpc Create (CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
                                post: "/v1/profile"
                                body: "*"
        };
    }
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    string first_name = 1;
    string last_name = 2;
}

message CreateRequest {
    string first_name = 1;
    string last_name = 2;
}

message CreateResponse {
    string id = 1;
}